frontend/test/should_pass/constr_001.grg
using constr_model_001;
