frontend/test/should_fail/no_transient_object_in_edge.grg
using no_transient_object_in_edge;
